// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/popconfirm/demo/async.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Open Popconfirm with async logic
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Title
              </div>
              <div
                class="g-popconfirm-description"
              >
                Open Popconfirm with async logic
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/async.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/basic.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
    type="button"
  >
    <span>
      Delete
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Delete the task
              </div>
              <div
                class="g-popconfirm-description"
              >
                Are you sure to delete this task?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                No
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                Yes
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/dynamic-trigger.tsx extend context correctly 1`] = `
<div>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
    type="button"
  >
    <span>
      Delete a task
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Delete the task
              </div>
              <div
                class="g-popconfirm-description"
              >
                Are you sure to delete this task?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                No
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                Yes
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  Whether directly execute：
  <button
    aria-checked="true"
    class="g-switch css-var-test-id g-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      />
      <span
        class="g-switch-inner-unchecked"
      />
    </span>
  </button>
</div>
`;

exports[`renders components/popconfirm/demo/dynamic-trigger.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/icon.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
    type="button"
  >
    <span>
      Delete
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="question-circle"
                class="gicon gicon-question-circle"
                role="img"
                style="color: red;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="question-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Delete the task
              </div>
              <div
                class="g-popconfirm-description"
              >
                Are you sure to delete this task?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/icon.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/locale.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-dangerous g-btn-color-dangerous g-btn-varig-outlined"
    type="button"
  >
    <span>
      Delete
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Delete the task
              </div>
              <div
                class="g-popconfirm-description"
              >
                Are you sure to delete this task?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                No
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                Yes
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/locale.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/placement.tsx extend context correctly 1`] = `
<div
  class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
    style="width: 432px;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-leftTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-leftBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-rightTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-rightBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-content"
          >
            <div
              class="g-popconfirm-inner-content"
            >
              <div
                class="g-popconfirm-message"
              >
                <span
                  class="g-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="gicon gicon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="g-popconfirm-message-text"
                >
                  <div
                    class="g-popconfirm-title"
                  >
                    Are you sure to delete this task?
                  </div>
                  <div
                    class="g-popconfirm-description"
                  >
                    Delete the task
                  </div>
                </div>
              </div>
              <div
                class="g-popconfirm-buttons"
              >
                <button
                  class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    No
                  </span>
                </button>
                <button
                  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                  style="width: 80px; margin: 4px;"
                  type="button"
                >
                  <span>
                    Yes
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Are you sure to delete this task?
                </div>
                <div
                  class="g-popconfirm-description"
                >
                  Delete the task
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  No
                </span>
              </button>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
                style="width: 80px; margin: 4px;"
                type="button"
              >
                <span>
                  Yes
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popconfirm/demo/placement.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/promise.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Open Popconfirm with Promise
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Title
              </div>
              <div
                class="g-popconfirm-description"
              >
                Open Popconfirm with Promise
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/promise.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/render-panel.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomRight g-popconfirm css-var-test-id"
    style="width: 250px;"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width: 250px;"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
              <div
                class="g-popconfirm-description"
              >
                Does this look good?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/render-panel.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/shift.tsx extend context correctly 1`] = `
<div
  style="width: 300vw; height: 300vh; display: flex; align-items: center; justify-content: center;"
>
  <button
    class="g-btn g-btn-primary g-popover-open"
    type="button"
  >
    <span>
      Scroll The Window
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    />
    <div
      class="g-popover-content"
    >
      <div
        class="g-popover-inner"
        role="tooltip"
      >
        <div
          class="g-popover-inner-content"
        >
          <div
            class="g-popconfirm-inner-content"
          >
            <div
              class="g-popconfirm-message"
            >
              <span
                class="g-popconfirm-message-icon"
              >
                <span
                  aria-label="exclamation-circle"
                  class="gicon gicon-exclamation-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="g-popconfirm-message-text"
              >
                <div
                  class="g-popconfirm-title"
                >
                  Thanks for using antd. Have a nice day !
                </div>
              </div>
            </div>
            <div
              class="g-popconfirm-buttons"
            >
              <button
                class="g-btn g-btn-default g-btn-sm"
                type="button"
              >
                <span>
                  Cancel
                </span>
              </button>
              <button
                class="g-btn g-btn-primary g-btn-sm"
                type="button"
              >
                <span>
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popconfirm/demo/shift.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Object Style
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="background-color: rgb(238, 238, 238); box-shadow: inset 5px 5px 3px #fff, inset -5px -5px 3px #ddd, 0 0 3px rgba(0,0,0,0.2);"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
                style="color: rgb(38, 38, 38);"
              >
                Object text
              </div>
              <div
                class="g-popconfirm-description"
                style="color: rgb(38, 38, 38);"
              >
                Object description
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Function Style
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popconfirm g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="background-color: rgba(53, 71, 125, 0.8); padding: 12px; border-radius: 4px;"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
                style="color: rgb(255, 255, 255);"
              >
                Function text
              </div>
              <div
                class="g-popconfirm-description"
                style="color: rgb(255, 255, 255);"
              >
                Function description
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              style="border-color: rgba(53, 71, 125, 0.6); background-color: rgb(255, 255, 255); color: rgba(53, 71, 125, 0.8);"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              style="background-color: rgba(53, 71, 125, 0.6); color: rgb(255, 255, 255);"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popconfirm/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popconfirm/demo/wireframe.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top g-popconfirm css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomRight g-popconfirm css-var-test-id"
    style="width: 250px;"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width: 250px;"
    >
      <div
        class="g-popover-content"
      >
        <div
          class="g-popconfirm-inner-content"
        >
          <div
            class="g-popconfirm-message"
          >
            <span
              class="g-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="gicon gicon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="g-popconfirm-message-text"
            >
              <div
                class="g-popconfirm-title"
              >
                Are you OK?
              </div>
            </div>
          </div>
          <div
            class="g-popconfirm-buttons"
          >
            <button
              class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-sm"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-sm"
              type="button"
            >
              <span>
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popconfirm/demo/wireframe.tsx extend context correctly 2`] = `[]`;
